// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quizzes intro screen with intro text renders correctly 1`] = `
<div
  class="quiz-container"
>
  <div
    class="card intro-outro-card"
  >
    <div
      class="card-body"
    >
      
      <h1>
        Intro
      </h1>
      
      <h5>
        0 questions
      </h5>
      <hr />
      <button
        class="btn btn-primary d-inline-block"
        type="button"
      >
         Start 
      </button>
    </div>
  </div>
  <div
    class="progress intro-outro-card"
    style="height: 1px; display: none;"
  >
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="progress-bar progress-bar-z"
      role="progressbar"
    />
  </div>
  
  
  <!--v-if-->
</div>
`;

exports[`Quizzes with 2 questions retry goes back to first 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px;"
  >
    <div
      aria-valuemax="2"
      aria-valuemin="0"
      aria-valuenow="1"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 50%;"
    />
  </div>
  
  
  <div
    class="card question"
  >
    <!--v-if-->
    <div
      class="card-body"
    >
      
       ... Mcq question ... 
      <div
        class="form-control"
      >
        <div
          class="row"
        >
          <div
            class="col-auto p-0"
          >
            <svg
              class="radio-svg"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="47"
                stroke="black"
                stroke-width="4"
              />
              <circle
                cx="50"
                cy="50"
                fill="dodgerblue"
                r="25"
                style="display: none;"
              />
            </svg>
          </div>
          <div
            class="col content"
          >
            
            opt 1 correct
            
          </div>
          <div
            class="col-1"
          >
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
      <div
        class="form-control"
      >
        <div
          class="row"
        >
          <div
            class="col-auto p-0"
          >
            <svg
              class="radio-svg"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="47"
                stroke="black"
                stroke-width="4"
              />
              <circle
                cx="50"
                cy="50"
                fill="dodgerblue"
                r="25"
                style="display: none;"
              />
            </svg>
          </div>
          <div
            class="col content"
          >
            
            opt 2
            
          </div>
          <div
            class="col-1"
          >
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
      <div
        class="form-control"
      >
        <div
          class="row"
        >
          <div
            class="col-auto p-0"
          >
            <svg
              class="radio-svg"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="47"
                stroke="black"
                stroke-width="4"
              />
              <circle
                cx="50"
                cy="50"
                fill="dodgerblue"
                r="25"
                style="display: none;"
              />
            </svg>
          </div>
          <div
            class="col content"
          >
            
            opt 3
            
          </div>
          <div
            class="col-1"
          >
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
      </div>
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="card-footer alert-light border-top border-light text-dark"
    >
      <!--v-if-->
      <transition-group-stub
        appear="false"
        class="float-end"
        css="true"
        name="q-btn"
        persisted="false"
        tag="div"
      >
        <!--v-if-->
        <button
          class="btn btn-primary q-btn ms-1"
          type="button"
        >
           Check 
        </button>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </transition-group-stub>
    </div>
  </div>
  
  
  <!--v-if-->
  
  
  <!--v-if-->
</div>
`;

exports[`Quizzes with 3 questions 2 clicks on next goes to the second question 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px;"
  >
    <div
      aria-valuemax="3"
      aria-valuemin="0"
      aria-valuenow="2"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 66.66666666666666%;"
    />
  </div>
  
  
  <!--v-if-->
  
  
  <div
    class="card question"
  >
    <!--v-if-->
    <div
      class="card-body"
    >
      
       ... Text question ... 
      
      <div
        class="mb-2"
      >
        <textarea
          class="form-control"
        />
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="card-footer alert-light border-top border-light text-dark"
    >
      <!--v-if-->
      <transition-group-stub
        appear="false"
        class="float-end"
        css="true"
        name="q-btn"
        persisted="false"
        tag="div"
      >
        <button
          class="btn btn-success q-btn ms-1"
          type="button"
        >
           Hint 
        </button>
        <button
          class="btn btn-primary q-btn ms-1"
          type="button"
        >
           Check 
        </button>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </transition-group-stub>
    </div>
  </div>
  
  
  <!--v-if-->
  
  
  <!--v-if-->
</div>
`;

exports[`Quizzes with all questions marks 3/4 correct shows ending screen 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px; display: none;"
  >
    <div
      aria-valuemax="4"
      aria-valuemin="0"
      aria-valuenow="5"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 125%;"
    />
  </div>
  
  
  <!--v-if-->
  
  
  <!--v-if-->
  
  
  <!--v-if-->
  
  
  <!--v-if-->
  
  
  <div
    class="card intro-outro-card"
  >
    <div
      class="card-body"
    >
      <h4
        class="mb-3"
      >
        Well done!
      </h4>
      <svg
        height="120px"
        viewBox="0 0 100 100"
        width="120px"
      >
        <circle
          class="score-background-circle"
          cx="50"
          cy="50"
          r="42"
        />
        <circle
          class="score-circle"
          cx="50"
          cy="50"
          r="42"
          stroke-dashoffset="264"
          style="stroke-dashoffset: 66; stroke: #51c2f8;"
          transform="rotate(-90, 50, 50)"
        />
        <text
          class="score"
          textLength="56"
          x="22"
          y="57"
        >
          3 / 4
        </text>
      </svg>
      <hr />
      <button
        class="btn btn-outline-primary"
        type="button"
      >
         Retry 
      </button>
    </div>
  </div>
</div>
`;

exports[`Quizzes with blanks question marked incorrect shows next button after answering 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px;"
  >
    <div
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="1"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 100%;"
    />
  </div>
  
  <div
    class="card question"
  >
    <!--v-if-->
    <div
      class="card-body"
    >
      
       ... Blanks question ... 
      <div
        class="form-control blanks-form-control danger"
      >
        <label
          class="row m-0 disabled"
        >
          <input
            class="form-control"
            disabled=""
          />
          <div
            class="col-auto"
          >
            <div>
              <i
                class="fa fa-check text-success"
              />
            </div>
            <!--v-if-->
          </div>
          <div
            class="col-auto blanks-keywords"
          >
            <strong>
              No answer checking keywords provided
            </strong>
          </div>
        </label>
        <!--v-if-->
      </div>
      <div
        class="form-control blanks-form-control danger"
      >
        <label
          class="row m-0 disabled"
        >
          <input
            class="form-control"
            disabled=""
          />
          <div
            class="col-auto"
          >
            <div>
              <i
                class="fa fa-times text-danger blanks-cross"
              />
            </div>
            <!--v-if-->
          </div>
          <div
            class="col-auto blanks-keywords"
          >
            <strong>
               Keywords:  
              
              <span
                class="badge rounded-pill bg-light text-dark fw-normal"
              >
                key
              </span>
              
            </strong>
          </div>
        </label>
        <!--v-if-->
      </div>
      <div
        class="form-control blanks-form-control danger"
      >
        <label
          class="row m-0 disabled"
        >
          <input
            class="form-control"
            disabled=""
          />
          <div
            class="col-auto"
          >
            <div>
              <i
                class="fa fa-check text-success"
              />
            </div>
            <!--v-if-->
          </div>
          <div
            class="col-auto blanks-keywords"
          >
            <strong>
              No answer checking keywords provided
            </strong>
          </div>
        </label>
        <!--v-if-->
      </div>
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="card-footer alert-light border-top border-light text-dark"
    >
      <i
        class="fa fa-times text-danger border-danger result-icon"
      />
      <transition-group-stub
        appear="false"
        class="float-end"
        css="true"
        name="q-btn"
        persisted="false"
        tag="div"
      >
        <!--v-if-->
        <!--v-if-->
        <button
          class="btn btn-primary q-btn ms-1"
          type="button"
        >
           Next 
        </button>
        <!--v-if-->
        <!--v-if-->
      </transition-group-stub>
    </div>
  </div>
  
  <!--v-if-->
</div>
`;

exports[`Quizzes with checkbox question marked incorrect shows next button after answering 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px;"
  >
    <div
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="1"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 100%;"
    />
  </div>
  
  <div
    class="card question"
  >
    <!--v-if-->
    <div
      class="card-body"
    >
      
       ... Checkbox question ... 
      <div
        class="form-control success"
      >
        <label
          class="row checkbox-label m-0 disabled"
        >
          <input
            class="checkbox"
            disabled=""
            onclick="event.stopPropagation()"
            type="checkbox"
          />
          <div
            class="col content"
          >
            
            opt 1 correct
            
          </div>
          <div
            class="col-auto"
          >
            <div>
              <i
                class="fa fa-check text-success"
              />
            </div>
          </div>
        </label>
        <!--v-if-->
      </div>
      <div
        class="form-control danger"
      >
        <label
          class="row checkbox-label m-0 disabled"
        >
          <input
            class="checkbox"
            disabled=""
            onclick="event.stopPropagation()"
            type="checkbox"
          />
          <div
            class="col content"
          >
            
            opt 2
            
          </div>
          <div
            class="col-auto"
          >
            <div>
              <i
                class="fa fa-times text-danger"
              />
            </div>
          </div>
        </label>
        <!--v-if-->
      </div>
      <div
        class="form-control success"
      >
        <label
          class="row checkbox-label m-0 disabled"
        >
          <input
            class="checkbox"
            disabled=""
            onclick="event.stopPropagation()"
            type="checkbox"
          />
          <div
            class="col content"
          >
            
            opt 3 correct
            
          </div>
          <div
            class="col-auto"
          >
            <div>
              <i
                class="fa fa-check text-success"
              />
            </div>
          </div>
        </label>
        <!--v-if-->
      </div>
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="card-footer alert-light border-top border-light text-dark"
    >
      <i
        class="fa fa-times text-danger border-danger result-icon"
      />
      <transition-group-stub
        appear="false"
        class="float-end"
        css="true"
        name="q-btn"
        persisted="false"
        tag="div"
      >
        <!--v-if-->
        <!--v-if-->
        <button
          class="btn btn-primary q-btn ms-1"
          type="button"
        >
           Next 
        </button>
        <!--v-if-->
        <!--v-if-->
      </transition-group-stub>
    </div>
  </div>
  
  <!--v-if-->
</div>
`;

exports[`Quizzes with mcq question marked correct shows next button after answering 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px;"
  >
    <div
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="1"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 100%;"
    />
  </div>
  
  <div
    class="card question"
  >
    <!--v-if-->
    <div
      class="card-body"
    >
      
       ... Mcq question ... 
      <div
        class="form-control success"
      >
        <div
          class="row disabled"
        >
          <div
            class="col-auto p-0"
          >
            <svg
              class="radio-svg"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="47"
                stroke="black"
                stroke-width="4"
              />
              <circle
                cx="50"
                cy="50"
                fill="dodgerblue"
                r="25"
                style=""
              />
            </svg>
          </div>
          <div
            class="col content"
          >
            
            opt 1 correct
            
          </div>
          <div
            class="col-1"
          >
            <div>
              <i
                class="fa fa-check text-success"
              />
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div
        class="form-control danger"
      >
        <div
          class="row disabled"
        >
          <div
            class="col-auto p-0"
          >
            <svg
              class="radio-svg"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="47"
                stroke="black"
                stroke-width="4"
              />
              <circle
                cx="50"
                cy="50"
                fill="dodgerblue"
                r="25"
                style="display: none;"
              />
            </svg>
          </div>
          <div
            class="col content"
          >
            
            opt 2
            
          </div>
          <div
            class="col-1"
          >
            <div>
              <i
                class="fa fa-times text-danger"
              />
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div
        class="form-control danger"
      >
        <div
          class="row disabled"
        >
          <div
            class="col-auto p-0"
          >
            <svg
              class="radio-svg"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="47"
                stroke="black"
                stroke-width="4"
              />
              <circle
                cx="50"
                cy="50"
                fill="dodgerblue"
                r="25"
                style="display: none;"
              />
            </svg>
          </div>
          <div
            class="col content"
          >
            
            opt 3
            
          </div>
          <div
            class="col-1"
          >
            <div>
              <i
                class="fa fa-times text-danger"
              />
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="card-footer alert-light border-top border-light text-dark"
    >
      <i
        class="fa fa-check text-success border-success result-icon"
      />
      <transition-group-stub
        appear="false"
        class="float-end"
        css="true"
        name="q-btn"
        persisted="false"
        tag="div"
      >
        <!--v-if-->
        <!--v-if-->
        <button
          class="btn btn-primary q-btn ms-1"
          type="button"
        >
           Next 
        </button>
        <!--v-if-->
        <!--v-if-->
      </transition-group-stub>
    </div>
  </div>
  
  <!--v-if-->
</div>
`;

exports[`Quizzes with text question marked correct shows next button after answering 1`] = `
<div
  class="quiz-container"
>
  <!--v-if-->
  <div
    class="progress intro-outro-card"
    style="height: 1px;"
  >
    <div
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="1"
      class="progress-bar progress-bar-z"
      role="progressbar"
      style="width: 100%;"
    />
  </div>
  
  <div
    class="card question"
  >
    <!--v-if-->
    <div
      class="card-body"
    >
      
       ... Text question ... 
      
      <div
        class="mb-2"
      >
        <textarea
          class="form-control"
          disabled=""
        />
        <div>
          <hr />
          <strong>
             Keywords:  
            
            <span
              class="badge rounded-pill bg-light text-dark fw-normal"
            >
              abc
            </span>
            
          </strong>
        </div>
      </div>
      <div
        class="answer"
      >
        
        text question answer
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="card-footer alert-light border-top border-light text-dark"
    >
      <i
        class="fa fa-check text-success border-success result-icon"
      />
      <transition-group-stub
        appear="false"
        class="float-end"
        css="true"
        name="q-btn"
        persisted="false"
        tag="div"
      >
        <button
          class="btn btn-success q-btn ms-1"
          type="button"
        >
           Hint 
        </button>
        <!--v-if-->
        <button
          class="btn btn-primary q-btn ms-1"
          type="button"
        >
           Next 
        </button>
        <!--v-if-->
        <!--v-if-->
      </transition-group-stub>
    </div>
  </div>
  
  <!--v-if-->
</div>
`;
